<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:useDefaultMargins="true"
    tools:context="com.example.deftsoft.second.CartActivity">

    <TextView
        android:id="@+id/total_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0 items" />

    <RadioGroup>

        <RadioButton
            android:id="@+id/first_item"
            style="@style/Base.TextAppearance.AppCompat.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="cartItemSelected"
            android:text="@string/one" />

        <RadioButton
            android:id="@+id/second_item"
            style="@style/Base.TextAppearance.AppCompat.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="cartItemSelected"
            android:text="@string/two" />

        <RadioButton
            android:id="@+id/third_item"
            style="@style/Base.TextAppearance.AppCompat.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="cartItemSelected"
            android:text="@string/three" />
    </RadioGroup>

    <GridLayout
        android:orientation="horizontal"
        android:useDefaultMargins="true">


        <Button
            android:onClick="addItem"
            android:text="@string/add_item" />

        <Button
            android:onClick="removeItem"
            android:text="@string/remove_item" />

        <Button
            android:onClick="add"
            android:text="@string/add" />

    </GridLayout>
</GridLayout>
